fix: remove gap

--- a/packages/components/src/styles/components/form/super-select.scss
+++ b/packages/components/src/styles/components/form/super-select.scss
@@ -294,7 +294,6 @@ $hds-super-select-item-height: 36px;
     display: flex;
     flex-grow: 1;
     flex-wrap: nowrap;
-    gap: 4px;
     min-width: 0;
     overflow: hidden;
     list-style: none;
